# magic-epaper-app

./: .gitignore  AGENTS.md  Appfile  Fastfile  Matchfile  PR_DESCRIPTION_Amitjoiya_185.md  README.md  pubspec.yaml
.github/: ISSUE_TEMPLATE  copilot-instructions.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: clean_screenshots.yml  flutter_upgrade.yml  pull_request.yml  pull_request_comment.yml  push.yml  release.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
assets/: displays.json
assets/card_templates/: employee_id.json  entry_pass_tag.json  event_badge.json  price_tag.json
docs/: card-templates-json.md  commitStyle.md  privacyPolicy.md
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: constants.dart  imagehandler.dart  main.dart  nfc_handler.dart
lib/card_templates/: card_template_selection_view.dart  (+11 more)
linux/: CMakeLists.txt  my_application.cc
metadata/: copyright.txt
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
sample_csv/: employee_id.csv  entry_pass_tag.csv  event_badge.csv  price_tag.csv
scripts/: android-secrets.tar.enc
test/: text_editor_localization_test.dart  text_fit_editor_test.dart  waveshare_g_image_codec_test.dart
test_integration/: screenshots.dart  test_driver.dart  utils.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+293 files in other folders)
